--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "18.3.1",
     "react-native": "0.77.0",
     "react-native-image-picker": "^7.2.3",
+    "react-native-pager-view": "^6.7.0",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
+    "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
