--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native-stack": "^7.2.0",
     "react": "18.3.1",
     "react-native": "0.77.0",
+    "react-native-elements": "^3.4.3",
     "react-native-fast-image": "^8.6.3",
     "react-native-image-picker": "^7.2.3",
     "react-native-pager-view": "^6.7.0",
