--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "aws-sdk": "^2.1692.0",
     "react": "18.3.1",
     "react-native": "0.77.0",
     "react-native-elements": "^3.4.3",
