--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,8 @@ yarn-error.log
 **/fastlane/Deliverfile
 **/fastlane/fastlane_session
 **/fastlane/appstoreconnect_api_key.json
+**/fastlane/.env.beta
+**/fastlane/.env.production
 
 # Bundle artifact
 *.jsbundle
