--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,3 +37,8 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+MYAPP_RELEASE_STORE_FILE=release.keystore
+MYAPP_RELEASE_KEY_ALIAS=liquid_spirit_alias
+MYAPP_RELEASE_STORE_PASSWORD=sunchin1310
+MYAPP_RELEASE_KEY_PASSWORD=sunchin1310
